# ai-agents

./: AI Agent Coursera.txt  AI Agent Udemy.txt  AI Agents Course.txt  pyproject.toml
SDR_Agent/: main.py  requirements.txt  sdr_agent_1.ipynb  sdr_agent_2.ipynb
crewai/coder/: README.md  pyproject.toml  report.md
crewai/coder/outputs/: coder_output.py  generated_cv.py
crewai/coder/src/coder/: crew.py  main.py
crewai/coder/src/coder/config/: agents.yaml  tasks.yaml
crewai/coder/src/coder/tools/: pdf_reader_tool.py
crewai/stock_picker/: report.md
crewai/stock_picker/src/stock_picker/: crew.py  main.py
crewai/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
crewai/stock_picker/src/stock_picker/tools/: financial_screener_tool.py  psx_scraper_tool.py
deep_research/: planner_agent.py
edu_agent/: edu_agent.py  edu_agent_gr.py  edu_agent_prompts.py  edu_agent_tools.py
engineering_team/: pyproject.toml  report.md
engineering_team/.gradio/flagged/: dataset1.csv
engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
engineering_team/src/engineering_team/tools/: __init__.py
langgraph_1/: app.py  lab_1.ipynb  lab_2.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
ms_autogen/: lab_1.ipynb
