[project]
name = "ai-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "gradio",
    "langchain>=1.3.1",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai",
    "openai-agents",
    "playwright>=1.60.0",
    "pypdf",
    "python-dotenv",
    "requests",
]

[tool.uv.workspace]
members = [
    "crewai/debate",
    "crewai/coder",
    "crewai/stock_picker",
]

[tool.uv]
prerelease = "allow"
